--- a/src/index.css
+++ b/src/index.css
@@ -15,6 +15,7 @@ code {
 @import url(./vendor/normalize.css);
 @import url(./vendor/fonts/fonts.css);
 @import url(./components/Promo/Promo.css);
+@import url(./components/NavTab/NavTab.css);
 @import url(./components/AboutProject/AboutProject.css);
 @import url(./components/Techs/Techs.css);
 @import url(./components/AboutMe/AboutMe.css);
