--- a/src/components/Auth/Auth.css
+++ b/src/components/Auth/Auth.css
@@ -60,6 +60,11 @@
   font-weight: 500;
   line-height: normal;
   border: 0;
+  transition: opacity 0.5s linear;
+}
+
+.auth__button:hover {
+  opacity: 0.8;
 }
 
 .auth__confirm {
@@ -74,6 +79,11 @@
 
 .auth__link {
   color: #4285F4;
+  transition: opacity 0.5s linear;
+}
+
+.auth__link:hover {
+  opacity: 0.7;
 }
 
 .auth__input-label {
