--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -46,4 +46,9 @@
   font-weight: 400;
   line-height: normal;
   text-decoration: none;
+  transition: opacity 0.5s linear;
+}
+
+.footer__link:hover {
+  opacity: 0.7;
 }
