--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -116,3 +116,8 @@
   background-color: #073042;
   box-shadow: 0px 3px 14px 0px rgba(0, 0, 0, 0.08);
 }
+
+.header__nav-profile_landing {
+  background-image: url(../../images/profileBlack.svg);
+  background-color: #202020;
+}
