--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -52,3 +52,9 @@
 .footer__link:hover {
   opacity: 0.7;
 }
+
+@media screen and (max-width: 783px) {
+  .footer {
+    padding: 79px 30px 0;
+  }
+}
