--- a/src/components/Auth/Auth.css
+++ b/src/components/Auth/Auth.css
@@ -55,6 +55,7 @@
   /* width: 396px; */
   width: 100%;
   height: 45px;
+  padding: 0;
   border-radius: 3px;
   background: #4285F4;
   color: #FFF;
