--- a/src/components/NavTab/NavTab.css
+++ b/src/components/NavTab/NavTab.css
@@ -7,7 +7,7 @@
 .navtab__list {
   display: flex;
   justify-content: center;
-  align-items: center;
+  padding-top: 24px;
   gap: 40px;
   list-style: none;
   margin: 0;
@@ -26,4 +26,10 @@
 
 .navtab__item:hover {
   opacity: 0.7;
+}
+
+@media screen and (max-width: 515px) {
+  .navtab__item {
+    font-size: 11px;
+  }
 }
