--- a/src/components/PageNotFound/PageNotFound.css
+++ b/src/components/PageNotFound/PageNotFound.css
@@ -3,7 +3,7 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  padding: 246px 0 60px;
+  padding: 246px 0 0;
 }
 
 .not-found__title {
@@ -25,7 +25,7 @@
   font-weight: 400;
   line-height: normal;
   margin: 0;
-  padding-bottom: 184px;
+  margin-bottom: 184px;
 }
 
 .not-found__button {
@@ -36,4 +36,35 @@
   font-weight: 400;
   line-height: normal;
   text-decoration: none;
+}
+
+@media screen and (max-width: 768px) {
+  .not-found {
+    padding-top: 408px;
+  }
+}
+
+@media screen and (max-width: 390px) {
+  .not-found {
+    padding-top: 329px;
+  }
+}
+
+@media screen and (max-width: 390px) {
+  .not-found__title {
+    font-size: 80px;
+  }
+}
+
+@media screen and (max-width: 390px) {
+  .not-found__subtitle {
+    font-size: 12px;
+    margin-bottom: 284px;
+  }
+}
+
+@media screen and (max-width: 390px) {
+  .not-found__button {
+    font-size: 12px;
+  }
 }
