--- a/src/components/Promo/Promo.css
+++ b/src/components/Promo/Promo.css
@@ -8,7 +8,7 @@
   align-items: center;
 }
 
-.promo__landing {
+.promo__image {
   width: 320px;
   height: 320px;
   margin: auto;
@@ -22,8 +22,6 @@
 }
 
 .promo__title {
-  width: 730px;
-  height: 116px;
   font-style: normal;
   font-weight: 400;
   font-size: 50px;
@@ -37,4 +35,45 @@
   margin-right: -50%;
   transform: translate(-50%, -50%); */
   margin: 0;
+}
+
+@media screen and (max-width: 783px) {
+  .promo {
+    height: 784px;
+  }
+}
+
+@media screen and (max-width: 783px) {
+  .promo__image {
+    top: 224px;
+  }
+}
+
+@media screen and (max-width: 783px) {
+  .promo__title {
+    top: 326px;
+  }
+}
+
+@media screen and (max-width: 783px) {
+  .promo {
+    height: 570px;
+  }
+}
+
+@media screen and (max-width: 515px) {
+  .promo__title {
+    font-size: 31px;
+    line-height: 39px;
+    letter-spacing: -1.24px;
+    top: 207px;
+  }
+}
+
+@media screen and (max-width: 515px) {
+  .promo__image {
+    width: 248px;
+    height: 248px;
+    top: 142px;
+  }
 }
