--- a/src/index.css
+++ b/src/index.css
@@ -22,6 +22,7 @@ code {
 @import url(./components/Portfolio/Portfolio.css);
 @import url(./components/Footer/Footer.css);
 @import url(./components/Header/Header.css);
+@import url(./components/MobileMenu/MobileMenu.css);
 @import url(./components/Auth/Auth.css);
 @import url(./components/Profile/Profile.css);
 @import url(./components/Movies/Movies.css);
