--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -17,8 +17,7 @@
   display: flex;
   justify-content: space-between;
   border-top: 1px solid #424242;
-  padding-top: 20px;
-  padding-bottom: 20px;
+  padding: 20px 0;
 }
 
 .footer__copyright {
@@ -55,6 +54,29 @@
 
 @media screen and (max-width: 783px) {
   .footer {
-    padding: 79px 30px 0;
+    padding: 79px 10px 0;
+  }
+}
+
+@media screen and (max-width: 405px) {
+  .footer__subtitle {
+    font-size: 12px;
+  }
+}
+
+@media screen and (max-width: 405px) {
+  .footer__nav {
+    flex-direction: column-reverse;
+    align-items: center;
+    gap: 30px;
+    padding-top: 30px;
+  }
+}
+
+@media screen and (max-width: 405px) {
+  .footer__links {
+    flex-direction: column;
+    align-items: center;
+    gap: 12px;
   }
 }
