--- a/src/components/AboutProject/AboutProject.css
+++ b/src/components/AboutProject/AboutProject.css
@@ -124,6 +124,8 @@
 
 @media screen and (max-width: 601px) {
   .project__list-text {
+    font-size: 11px;
+    line-height: 16px;
     padding-top: 16px;
   }
 }
@@ -164,5 +166,24 @@
     font-size: 18px;
     letter-spacing: -0.72px;
     padding-bottom: 28px;
+  }
+}
+
+@media screen and (max-width: 405px) {
+  .project__list-subtitle {
+    font-size: 18px;
+    letter-spacing: -0.72px;
+  }
+}
+
+@media screen and (max-width: 405px) {
+  .project__week {
+    font-size: 11px;
+  }
+}
+
+@media screen and (max-width: 405px) {
+  .project__block {
+    font-size: 11px;
   }
 }
