--- a/src/components/Auth/Auth.css
+++ b/src/components/Auth/Auth.css
@@ -4,13 +4,11 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  /* align-items: center; */
   margin: auto;
   padding: 70px 0;
 }
 
 .auth__title {
-  /* width: 396px; */
   color: #FFF;
   font-size: 24px;
   font-style: normal;
@@ -30,7 +28,6 @@
 }
 
 .auth__input {
-  /* width: 396px; */
   width: 100%;
   border-radius: 8px;
   background: #2F2F2F;
@@ -52,7 +49,6 @@
 }
 
 .auth__button {
-  /* width: 396px; */
   width: 100%;
   height: 45px;
   padding: 0;
@@ -92,7 +88,6 @@
 }
 
 .auth__input-label {
-  /* width: 396px; */
   width: 100%;
   color: #8B8B8B;
   font-size: 10px;
@@ -111,6 +106,12 @@
   line-height: normal;
 }
 
+@media screen and (max-width: 783px) {
+  .auth {
+    padding: 232px 0;
+  }
+}
+
 @media screen and (max-width: 450px) {
   .auth {
     width: 260px;
@@ -121,7 +122,6 @@
 
 @media screen and (max-width: 450px) {
   .auth__title {
-    /* width: 260px; */
     padding: 50px 0 80px;
   }
 }
@@ -134,7 +134,7 @@
 
 @media screen and (max-width: 450px) {
   .auth__input:last-of-type {
-    margin-bottom: 252px;
+    margin-bottom: 179px;
   }
 }
 
