--- a/src/components/FilterCheckbox/FilterCheckbox.css
+++ b/src/components/FilterCheckbox/FilterCheckbox.css
@@ -57,3 +57,15 @@
   position: relative;
   padding: 0 0 0 48px;
 }
+
+@media screen and (max-width: 405px) {
+  .filter__input + label {
+    font-size: 11px;
+  }
+}
+
+@media screen and (max-width: 405px) {
+  .filter__input + label {
+    padding-top: 3px;
+  }
+}
