--- a/src/components/MoviesCard/MoviesCard.css
+++ b/src/components/MoviesCard/MoviesCard.css
@@ -1,6 +1,7 @@
 .card {
-  width: 364px;
   height: 281px;
+  display: flex;
+  flex-direction: column;
   border-radius: 6px;
   box-shadow: 0px 4px 30px 0px rgba(0, 0, 0, 0.08);
 }
@@ -11,9 +12,6 @@
 }
 
 .card__info {
-  /* display: flex; */
-  /* justify-content: space-between; */
-  /* gap: 12px; */
   padding: 9px 16px 16px;
   background: #222;
 }
@@ -55,4 +53,61 @@
 
 .card__button_active {
   background: url(../../images/save4.svg) no-repeat center;
+}
+
+@media screen and (max-width: 830px) {
+  .card {
+    height: 262px;
+  }
+}
+
+@media screen and (max-width: 830px) {
+  .card__image {
+    height: 190px;
+    width: 100%;
+  }
+}
+
+@media screen and (max-width: 830px) {
+  .card__info {
+    padding: 8px 14px 14px;
+  }
+}
+
+@media screen and (max-width: 830px) {
+  .card__duration {
+    margin-top: 7px;
+  }
+}
+
+@media screen and (max-width: 405px) {
+  .card {
+    height: 237px;
+  }
+}
+
+@media screen and (max-width: 405px) {
+  .card__image {
+    height: 168px;
+  }
+}
+
+@media screen and (max-width: 405px) {
+  .card__title {
+    font-size: 12px;
+    width: 240px;
+  }
+}
+
+@media screen and (max-width: 405px) {
+  .card__duration {
+    font-size: 10px;
+    margin-top: 6px;
+  }
+}
+
+@media screen and (max-width: 405px) {
+  .card__info {
+    padding: 7px 10px 14px;
+  }
 }
