--- a/src/components/SavedMovies/SavedMovies.css
+++ b/src/components/SavedMovies/SavedMovies.css
@@ -4,5 +4,16 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  align-items: center;
+}
+
+@media screen and (max-width: 910px) {
+  .saved-movies {
+    padding: 80px 30px;
+  }
+}
+
+@media screen and (max-width: 405px) {
+  .saved-movies {
+    padding: 80px 14px;
+  }
 }
