--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -17,6 +17,11 @@
 .header__logo {
   width: 38px;
   height: 38px;
+  transition: opacity 0.5s linear;
+}
+
+.header__logo:hover {
+  opacity: 0.7;
 }
 
 .header__routs {
@@ -85,6 +90,11 @@
   font-weight: 400;
   line-height: 18px;
   text-decoration: none;
+  transition: opacity 0.5s linear;
+}
+
+.header__nav-item:hover {
+  opacity: 0.7;
 }
 
 .header__nav-item_active {
@@ -100,6 +110,11 @@
   border-radius: 40px;
   background-color: #073042;
   box-shadow: 0px 3px 14px 0px rgba(0, 0, 0, 0.08);
+  transition: opacity 0.5s linear;
+}
+
+.header__nav-profile:hover {
+  opacity: 0.7;
 }
 
 .header__nav-profile_landing {
@@ -120,6 +135,7 @@
   position: relative;
   border: 0;
   transition: opacity 0.3s linear;
+  padding: 0;
 }
 
 .header__menu-burger:hover {
