--- a/src/components/PageNotFound/PageNotFound.css
+++ b/src/components/PageNotFound/PageNotFound.css
@@ -3,7 +3,7 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  padding: 246px 0 0;
+  padding: 246px 0 60px;
 }
 
 .not-found__title {
@@ -36,6 +36,11 @@
   font-weight: 400;
   line-height: normal;
   text-decoration: none;
+  transition: opacity 0.5s linear;
+}
+
+.not-found__button:hover {
+  opacity: 0.7;
 }
 
 @media screen and (max-width: 783px) {
