--- a/src/components/Auth/Auth.css
+++ b/src/components/Auth/Auth.css
@@ -8,6 +8,16 @@
   padding: 70px 0;
 }
 
+.auth__logo {
+  width: 38px;
+  height: 38px;
+  transition: opacity 0.5s linear;
+}
+
+.auth__logo:hover {
+  opacity: 0.7;
+}
+
 .auth__title {
   color: #FFF;
   font-size: 24px;
@@ -32,7 +42,6 @@
   border-radius: 8px;
   background: #2F2F2F;
   color: #FFF;
-  font-family: Inter;
   font-size: 13px;
   font-style: normal;
   font-weight: 500;
