--- a/src/components/MoviesCardList/MoviesCardList.css
+++ b/src/components/MoviesCardList/MoviesCardList.css
@@ -1,4 +1,4 @@
-.cards {
+.movies__list {
   display: grid;
   grid-template-columns: repeat(auto-fill, 364px);
   justify-content: space-around;
@@ -8,7 +8,7 @@
   padding-top: 80px;
 }
 
-.cards__button {
+.movies__button {
   width: 100%;
   height: 36px;
   border-radius: 6px;
@@ -25,25 +25,25 @@
   cursor: pointer;
 }
 
-.cards__button:hover {
+.movies__button:hover {
   opacity: 0.8;
 }
 
 @media screen and (max-width: 830px) {
-  .cards {
+  .movies__list {
     grid-template-columns: repeat(auto-fill, 339px);
     gap: 30px;
   }
 }
 
 @media screen and (max-width: 830px) {
-  .cards__button {
+  .movies__button {
     margin-top: 80px;
   }
 }
 
 @media screen and (max-width: 405px) {
-  .cards {
+  .movies__list {
     grid-template-columns: repeat(auto-fill, 300px);
     gap: 14px;
     padding-top: 50px;
@@ -51,7 +51,7 @@
 }
 
 @media screen and (max-width: 830px) {
-  .cards__button {
+  .movies__button {
     margin-top: 76px;
   }
 }
