--- a/src/components/SearchForm/SearchForm.css
+++ b/src/components/SearchForm/SearchForm.css
@@ -16,9 +16,19 @@
   border-radius: 40px;
   background: #2F2F2F;
   border: 0;
-  height: 46px;
-  padding: 0;
+  /* height: 46px; */
+  padding: 14px 0 14px 22px;
   width: 100%;
+  color: #FFF;
+  box-sizing: border-box;
+}
+
+.search__input::placeholder {
+  color: #8B8B8B;
+  font-size: 13px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 17px;
 }
 
 .search__input-label {
