--- a/src/components/Auth/Auth.css
+++ b/src/components/Auth/Auth.css
@@ -37,6 +37,12 @@
   width: 396px;
 }
 
+/* .auth__input-container {
+  width: 100%;
+  position: relative;
+  margin-bottom: 25px;
+} */
+
 .auth__input {
   width: 100%;
   border-radius: 8px;
@@ -49,12 +55,24 @@
   border: 0;
   padding: 15px;
   box-sizing: border-box;
+  /* margin-bottom: 0; */
   margin-bottom: 20px;
+  /* margin-top: 20px; */
 }
 
 .auth__input:last-of-type {
   margin-bottom: 91px;
   color: #EE3465;
+}
+
+.auth__input-error {
+  width: 396px;
+  color: #EE3465;
+  font-size: 10px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  /* padding-top: 10px; */
 }
 
 .auth__button {
@@ -76,6 +94,12 @@
 
 .auth__button:hover {
   opacity: 0.8;
+}
+
+.auth__button_disabled {
+  background: #F8F8F8;
+  color: #000;
+  cursor: auto;
 }
 
 .auth__confirm {
@@ -106,15 +130,18 @@
   font-weight: 400;
   line-height: normal;
   padding-bottom: 10px;
+  /* padding-top: 20px; */
 }
 
-.auth__input-error {
+.auth__error {
   width: 396px;
   color: #EE3465;
-  font-size: 10px;
+  font-size: 11px;
   font-style: normal;
   font-weight: 400;
   line-height: normal;
+  margin-bottom: 20px;
+  text-align: center;
 }
 
 @media screen and (max-width: 783px) {
