--- a/src/components/Profile/Profile.css
+++ b/src/components/Profile/Profile.css
@@ -27,6 +27,7 @@
 
 .profile__container {
   display: flex;
+  flex-direction: column;
   justify-content: space-between;
   align-items: baseline;
   border-bottom: 1px solid #424242;
@@ -67,6 +68,29 @@
   line-height: normal;
 }
 
+.profile__input-error {
+  color: #EE3465;
+  font-size: 10px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+}
+
+.profile__error {
+  width: 396px;
+  color: #EE3465;
+  font-size: 11px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  text-align: center;
+  position: absolute;
+  bottom: 125px;
+  left: 50%;
+  margin-right: -50%;
+  transform: translate(-50%, -50%);
+}
+
 .profile__button-edit {
   color: #FFF;
   background: #202020;
@@ -98,6 +122,7 @@
   line-height: normal;
   transition: opacity 0.5s linear;
   cursor: pointer;
+  position: relative;
 }
 
 .profile__button-exit:hover {
@@ -111,6 +136,7 @@
   background: #4285F4;
   color: #FFF;
   margin-top: 207px;
+  /* margin-top: 20px; */
   font-size: 14px;
   font-style: normal;
   font-weight: 500;
@@ -130,6 +156,7 @@
   padding: 0;
   background: #4285F4;
   color: #FFF;
+  /* margin-top: 207px; */
   margin-top: 207px;
   font-size: 14px;
   font-style: normal;
@@ -137,6 +164,12 @@
   line-height: normal;
   transition: opacity 0.5s linear;
   cursor: pointer;
+}
+
+.profile__button-submit_disabled {
+  background: #F8F8F8;
+  color: #000;
+  cursor: auto;
 }
 
 .profile__button-submit:hover {
