--- a/src/components/MoviesCard/MoviesCard.css
+++ b/src/components/MoviesCard/MoviesCard.css
@@ -2,18 +2,22 @@
   height: 281px;
   display: flex;
   flex-direction: column;
-  border-radius: 6px;
+  
   box-shadow: 0px 4px 30px 0px rgba(0, 0, 0, 0.08);
 }
 
 .card__image {
   width: 100%;
   height: 203px;
+  border-top-left-radius: 6px;
+  border-top-right-radius: 6px;
 }
 
 .card__info {
   padding: 9px 16px 16px;
   background: #222;
+  border-bottom-left-radius: 6px;
+  border-bottom-right-radius: 6px;
 }
 
 .card__container {
