--- a/src/components/SearchForm/SearchForm.css
+++ b/src/components/SearchForm/SearchForm.css
@@ -21,6 +21,7 @@
   width: 100%;
   color: #FFF;
   box-sizing: border-box;
+  position: relative;
 }
 
 .search__input::placeholder {
@@ -42,6 +43,18 @@
   left: 22px;
 }
 
+.search__input-error {
+  visibility: visible;
+  color: #EE3465;
+  font-size: 10px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  position: absolute;
+  left: 22px;
+  top: 55px;
+}
+
 .search__button {
   width: 34px;
   height: 34px;
@@ -59,6 +72,10 @@
 
 .search__button:hover {
   opacity: 0.8;
+}
+
+.search__button_disabled {
+  cursor: auto;
 }
 
 @media screen and (max-width: 830px) {
