--- a/src/components/Profile/Profile.css
+++ b/src/components/Profile/Profile.css
@@ -38,6 +38,11 @@
   border: 0;
 }
 
+.profile__element {
+  display: flex;
+  width: 100%;
+}
+
 .profile__input {
   width: 100%;
   height: 16px;
@@ -79,6 +84,21 @@
 .profile__error {
   width: 396px;
   color: #EE3465;
+  font-size: 11px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  text-align: center;
+  position: absolute;
+  bottom: 125px;
+  left: 50%;
+  margin-right: -50%;
+  transform: translate(-50%, -50%);
+}
+
+.profile__success {
+  color: #3DDC84;
+  width: 396px;
   font-size: 11px;
   font-style: normal;
   font-weight: 400;
